<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.MainActivity">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/bill_amount_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

        <EditText
          android:id="@+id/bill_amount_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/bill_amount"
          android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
      android:id="@+id/tip_percentage_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/bill_amount_input_layout"
      app:layout_constraintEnd_toEndOf="parent">

        <EditText
          android:id="@+id/tip_percentage_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/tip_percentage"
          android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/number_of_people_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tip_percentage_input_layout"
      app:layout_constraintEnd_toEndOf="parent">

        <EditText
          android:id="@+id/number_of_people_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/number_of_people"
          android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
      android:id="@+id/tip_calculator_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/number_of_people_input_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/calculate"
      android:layout_marginTop="16dp"
      />

    <TextView
      android:id="@+id/tip_amount_label"
      android:text="@string/tip_amount"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/tip_calculator_button"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"/>

    <TextView
      android:id="@+id/tip_amount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="bold"
      android:text="@string/default_bill_value"
      app:layout_constraintTop_toBottomOf="@+id/tip_calculator_button"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      tools:text="$24.00"/>

    <TextView
      android:id="@+id/total_amount_label"
      android:text="@string/total_amount"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/tip_amount_label"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"/>

    <TextView
      android:id="@+id/total_amount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="bold"
      android:text="@string/default_bill_value"
      app:layout_constraintTop_toBottomOf="@+id/tip_amount_label"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      tools:text="$105.00"/>

    <TextView
      android:id="@+id/amount_per_person_label"
      android:text="@string/amount_per_person"
      android:textSize="18sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/total_amount_label"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"/>

    <TextView
      android:id="@+id/amount_per_person"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="bold"
      android:text="@string/default_bill_value"
      app:layout_constraintTop_toBottomOf="@+id/total_amount_label"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      tools:text="$25.00"/>


</android.support.constraint.ConstraintLayout>